--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,5 +51,9 @@
     "hipaa"
   ],
   "author": "AI on FHIR Assessment",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  }
 }
