--- a/netlify.toml
+++ b/netlify.toml
@@ -8,6 +8,7 @@
   NODE_ENV = "production"
   NEXT_TELEMETRY_DISABLED = "1"
   NPM_FLAGS = "--prefix=/opt/buildhome/.local"
+  NODE_VERSION = "18"
 
 # Next.js specific settings
 [build.processing]
